buttons can have images or labels.  So can the popup button itself, and the
popup button can be a "standard" button too.  (The only caviat is that the
popup button must come before any of the buttons in the menu that it pops up;
no biggie.)

I've included a sample config file to demonstrate this.  popup-sample.cfg
shows a single 1x1 up-arrow button which pops up several other buttons.  Nice
and small; stays out of your way until you need it. :-)

I had to fix several issues with the epplet library to make some of this stuff
work, but nothing that violates the spirit of epplets.  For example,
Epplet_gadget_show() now delays the actual drawing of the epplet gadgets until
the epplet itself is unhidden.  And the image button sizing bug with the popup
stuff is fixed.  Stuff like that. =)

I'm going to try to add a GUI configuration interface, as well as come up with
some more sophisticated sample configs.  Just give me time.

Also, if you have a toolbox icon (preferably rendered) or can make one, please
let me know.  E-Toolbox needs an icon. :-)

-------------------------------------------------------------------------------

Thu Apr 27 14:22:57 PDT 2000
(KainX)

Fixed a bug in the default configuration.  Thanks Vox.

-------------------------------------------------------------------------------

Thu Apr 27 21:29:17 PDT 2000
(KainX)

A configuration dialog for E-Toolbox.  Not that it actually alters anything
yet, but we're getting there. :-)

-------------------------------------------------------------------------------

Sun Apr 30 23:53:37 PDT 2000
(KainX)

I fixed some bugs in the epplet config load/save routines which were causing
problems with E-Toolbox.  I also added some stuff, like gadget type checking
and the ability to check a gadget's type.  And E-Toolbox now has a config
dialog; it's untested, though, but it might work. :-)

-------------------------------------------------------------------------------