@@ -1,0 +1,53 @@
+# This sample config demonstrates a bar full
+# of buttons.  It also adds a "shade" button.
+
+width 16
+height 3
+button_0 <exit>
+button_0_image <close>
+button_0_x 0
+button_0_y 0
+button_0_w 1
+button_0_h 1
+button_1 efm
+button_1_image folder.png
+button_1_x 4
+button_1_y 0
+button_1_w 3
+button_1_h 3
+button_2 ee2
+button_2_image ee2.png
+button_2_x 7
+button_2_y 0
+button_2_w 3
+button_2_h 3
+button_3 <config>
+button_3_image <configure>
+button_3_x 0
+button_3_y 2
+button_3_w 1
+button_3_h 1
+button_4 Eterm
+button_4_image eterm.png
+button_4_x 1
+button_4_y 0
+button_4_w 3
+button_4_h 3
+button_5 Eterm -t mutt
+button_5_image mail.png
+button_5_x 10
+button_5_y 0
+button_5_w 3
+button_5_h 3
+button_6 netscape
+button_6_image netscape.png
+button_6_x 13
+button_6_y 0
+button_6_w 3
+button_6_h 3
+button_7 <shade>
+button_7_image <arrow_down>
+button_7_x 0
+button_7_y 1
+button_7_w 1
+button_7_h 1
